--- a/views/admin/partials/auth/login.html
+++ b/views/admin/partials/auth/login.html
@@ -1,4 +1,4 @@
-<div ng-controller="AuthController">
+<div ng-controller="AuthController" ng-init="init()">
 	<div class="col-md-offset-4 col-sm-3 col-md-3 col-lg-3">
 		<form ng-submit="login()">
 			<div class="form-group">
