--- a/views/admin/partials/auth/register.jade
+++ b/views/admin/partials/auth/register.jade
@@ -1,4 +1,4 @@
-div(ng-controller='AuthController')
+div(ng-controller='AuthController' ng-init='init()')
 	.col-md-offset-4.col-sm-3.col-md-3.col-lg-3
 		form(ng-submit='register()')
 			.form-group
